--- a/deploy/App-uncompressed.html
+++ b/deploy/App-uncompressed.html
@@ -122,7 +122,7 @@
 
         // create the grid
         var grid = Ext.create('Ext.grid.Panel', {
-            title: 'Defect Leakage',
+            title: 'Defect Density',
             store: store,
             columns: cols
         });
