swapped columns and rows

--- a/deploy/App-uncompressed.html
+++ b/deploy/App-uncompressed.html
@@ -32,6 +32,7 @@
                     that.iterations = _.sortBy( that.iterations, function (i) {
                        return new Date( Date.parse( i.get("EndDate"))) ;
                     });
+                    that.iterations = that.iterations.reverse();
                     // get the defect data
                     that._getDefects();
                 }
@@ -96,18 +97,21 @@
 
         // create an array of items by first grouping defects by the iteration and then the environment
         var items = [];
-        _.each(elabels, function(l) { items.push({env:l});});
+        //_.each(elabels, function(l) { items.push({env:l});});
+        _.each(ilabels, function(l) { items.push({iteration:l});});
+        
         _.each( _.keys( groupedByIteration ), function(key) {
             var envs = _.groupBy( groupedByIteration[key], function(g) { return g.get("Environment");});
             // for each environment, store the value in the correct item
             _.each( _.keys(envs), function(envkey) { 
-                var item = _.find(items, function(i) { return i.env == envkey;});
-                item[key] = envs[envkey].length;
+                var item = _.find(items, function(i) { return i.iteration == key;});
+                item[envkey] = envs[envkey].length;
             });
         });
 
         // the set of fields in the table
-        var fields = ["env"].concat(ilabels); 
+        //var fields = ["env"].concat(ilabels); 
+        var fields = ["iteration"].concat(elabels); 
 
         // a store from the array of items
         var store = Ext.create('Ext.data.Store', {
@@ -116,7 +120,7 @@
         });
 
         // set of table columns
-        var cols = _.map( ["env"].concat(ilabels) , function(f) { 
+        var cols = _.map( ["iteration"].concat(elabels) , function(f) { 
             return { text: f,  dataIndex: f, flex : 1 };
         });
 
